discount api and UI with json pipe

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,6 +9,8 @@
     <offer-container fxFlex="18rem"></offer-container>
   </div>
   <mat-divider vertical="true"></mat-divider>
-  <div fxFlex="50"></div>
+  <div fxFlex>
+    <discount-container></discount-container>
+  </div>
 </div>
 <router-outlet></router-outlet>
