--- a/frontend/src/app/discount/container/container.component.html
+++ b/frontend/src/app/discount/container/container.component.html
@@ -1,1 +1,7 @@
-<p>container works!</p>
+<div class="mat-elevation-z5 container">
+  <mat-toolbar>
+    <span>Discount</span>
+  </mat-toolbar>
+  <discount-apply></discount-apply>
+  <discount-toggle-list></discount-toggle-list>
+</div>
